crates/wasm-cli/tests/snapshots/test__cli_compose_build_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Build a composed component from a WAC script

Usage: wasm compose build [OPTIONS] [FILE]

Arguments:
  [FILE]  Path to a `.wac` file. If omitted, scans the `seams/` directory

Options:
  -o, --output <OUTPUT>      Output path for the composed component [default: build]
      --import-dependencies  Import dependencies instead of embedding them
  -h, --help                 Print help
  -V, --version              Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
