crates/wasm-cli/tests/snapshots/test__cli_compose_parse_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Parse a WAC file and print its AST as JSON

Usage: wasm compose parse [OPTIONS] <FILE>

Arguments:
  <FILE>  Path to a `.wac` file to parse

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
