crates/wasm-cli/tests/snapshots/test__cli_compose_plug_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Plug component exports into a socket component's imports

Usage: wasm compose plug [OPTIONS] --plug <PLUGS> <SOCKET>

Arguments:
  <SOCKET>  Path to the socket component (the component that receives imports)

Options:
      --plug <PLUGS>     Paths to plug components whose exports fill the socket's imports
  -o, --output <OUTPUT>  Output path for the composed component [default: plugged.wasm]
  -h, --help             Print help
  -V, --version          Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
