crates/wasm-cli/tests/snapshots/test__cli_compose_resolve_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Parse and resolve a WAC file and print the resolved representation as JSON

Usage: wasm compose resolve [OPTIONS] <FILE>

Arguments:
  <FILE>  Path to a `.wac` file to resolve

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
