crates/wasm-cli/tests/snapshots/test__cli_compose_targets_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Check if a component conforms to a WIT world

Usage: wasm compose targets [OPTIONS] <COMPONENT> <WIT>

Arguments:
  <COMPONENT>  Path to a Wasm component to check
  <WIT>        Path to a WIT file defining the world to check against

Options:
      --world <WORLD>  The world within the WIT file to check against. If omitted, uses the default world
  -h, --help           Print help
  -V, --version        Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
