crates/wasm-cli/tests/snapshots/test__cli_package_pull_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Pull a component from the registry

Usage: wasm package pull [OPTIONS] <REFERENCE>

Arguments:
  <REFERENCE>
          The reference to pull

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --color <WHEN>
          When to use colored output.
          
          Can also be controlled via environment variables: - NO_COLOR=1 (disables color) - CLICOLOR=0 (disables color) - CLICOLOR_FORCE=1 (forces color)
          
          [default: auto]
          [possible values: auto, always, never]

      --offline
          Run in offline mode.
          
          Disables all network operations. Commands that require network access will fail with an error. Local-only commands will continue to work.
